<resources>
    <string name="app_name">MovieCatalogue4</string>
    <string name="name_movies">Film</string>
    <string name="name_desc">Description</string>
    <string name="name_date">Date</string>
    <string name="name_genre">Genre</string>
    <string name="name_director">Director</string>

    <string name="name_cast">Cast</string>

    <string name="name_tv_show">TV Show</string>

    <string name="title_activity_bottom_navigation">ActivityBottomNavigation</string>

    <string name="title_home">Home</string>

    <string name="title_dashboard">Dashboard</string>

    <string name="title_notifications">Notifications</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="change_language">Change Language</string>
    <string name="description">Description</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_language">Language</string>
    <string name="poster">poster</string>
    <string name="title_favorited">Favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="add_failed">Failed add to favorite</string>
    <string name="delete_from_favorite">Remove From Favorite</string>
    <string name="delete_failed">Failed remove From Favorite</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="search">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_daily">Daily Reminder</string>
    <string name="no_data">No data</string>
    <string name="daily_reminder" translatable="false">daily_reminder</string>
    <string name="daily_reminder_on">Daily Reminder On</string>
    <string name="daily_reminder_off">Daily Reminder Off</string>
    <string name="switching_on_release_reminder">Switching on Release Reminder</string>
    <string name="release_reminder_on">Release Reminder On</string>
    <string name="release_reminder_off">Release Reminder Off</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="release_reminder" translatable="false">release_reminder</string>
    <string name="enable_daily_reminder">Enable Daily Reminder</string>
    <string name="enable_release_reminder">Enable New Release Reminder</string>
    <string name="key_daily_reminder" translatable="false">daily_reminder</string>
    <string name="key_release_reminder" translatable="false">release_reminder</string>
    <string name="message_daily_reminder" translatable="false">Movie reminder today</string>
    <string name="setting_reminder">Reminder Setting</string>
    <string name="rating">Rating</string>
    <string name="release_date" translatable="false">Release Date</string>
    <string name="original_language">Original Language</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="sync_title">Sync email periodically</string>

</resources>
