<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.DetailsMovieActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main_style"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


            <ImageView
                android:id="@+id/img_item_poster"
                android:layout_width="162dp"
                android:layout_height="228dp"
                android:layout_gravity="start"
                android:contentDescription="@string/desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toEndOf="@+id/img_item_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/title_movie"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_item_poster"
                app:layout_constraintTop_toTopOf="@+id/img_item_poster" />

            <TextView
                android:id="@+id/tv_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/popularity"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toEndOf="@+id/img_item_poster"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/tv_item_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/tv_popularity"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_popularity"
                app:layout_constraintTop_toBottomOf="@+id/tv_popularity" />

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_date"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/tv_date"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <TextView
                android:id="@+id/tv_item_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_language"
                app:layout_constraintEnd_toEndOf="@+id/tv_language"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_language"
                app:layout_constraintTop_toBottomOf="@+id/tv_language" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_style"
                android:text="@string/name_desc"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_item_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/release_date"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_popularity"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_popularity" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="100dp"
                android:text="@string/original_language"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/overview"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_item_poster" />

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/vote_average"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.987"
                app:layout_constraintStart_toEndOf="@+id/tv_popularity"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/tv_item_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_average"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

            <TextView
                android:id="@+id/tv_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/vote_count"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_vote_average" />

            <TextView
                android:id="@+id/tv_item_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_count"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="427dp"
            android:layout_height="247dp"
            android:layout_gravity="center"
            android:fitsSystemWindows="true"
            android:padding="8dp"
            app:contentScrim="?attr/colorPrimaryDark"
            app:expandedTitleMarginEnd="4dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="412dp"
                android:layout_height="243dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc"
                android:fitsSystemWindows="true"
                android:src="@drawable/example_detail_backdrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
